--- a/index.html
+++ b/index.html
@@ -1,2 +1,25 @@
 <!DOCTYPE html>
 <html>
+    <head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
+		<meta name="description" content="Amber Jiang portfolio">
+		<meta name="keywords" content="Amber Jiang, UC Berkeley">
+
+  		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="https://use.typekit.net/ufg7hqz.css">
+		<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+
+		<title>Amber Jiang</title>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153644395-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-153644395-1');
+		</script>
+	</head>
+</html>
