--- a/index.html
+++ b/index.html
@@ -22,4 +22,31 @@
 		  gtag('config', 'UA-153644395-1');
 		</script>
 	</head>
+    <body>
+
+		<!--Navigation Bar-->
+		<div id="nav">
+			<a href="#home-section" class="nav-item right">AMBER JIANG</a>
+			<a href="#courses-section" class="nav-item left">COURSES</a>
+			<a href="#projects-section" class="nav-item left">PROJECTS</a>
+			<a href="#library-section" class="nav-item left">LIBRARY</a>
+            <a href="#crochet-section" class="nav-item left">CROCHET</a>
+		</div>
+
+		<div class="page-content">
+			
+			<!--Home Page-->
+			<section id="home-section">
+				<div class="container row">
+					<div class="container row" id="landing-container">
+						<div class="container column" id="landing-text">
+							<h1 class="title">AMBER JIANG</h1>
+							<p id="app"></p>
+						</div>
+					</div>
+					<a href="#library-section" class="arrow"></a>
+				</div>
+			</section>
+        </div>
+    </body>
 </html>
