--- a/index.html
+++ b/index.html
@@ -47,6 +47,54 @@
 					<a href="#library-section" class="arrow"></a>
 				</div>
 			</section>
+            <!--Education Section-->
+			<section class="container column parallax" id="education-section">
+				<div class="container column" id="text">
+					<h1 class="subtitle">EDUCATION</h1>
+					<div class="container row" id="education-title">
+						<div class="container column" id="school">
+							<h2>University of California, Berkeley</h2>
+							<h3>B.A. - Computer Science, Data Science</h3>
+							<p>Expected Graduation: May 2022</p>
+						</div>
+					</div>
+					<div class="container column" id="coursework">
+						<h4>Relevant Coursework:</h4>
+						<p>Computer Science</p>
+						<ul>
+							<li>Structure and Interpretation of Computer Programs (CS 61A)</li>
+							<li>Data Structures (CS 61B)</li>
+							<li>Machine Structures (CS 61C)</li>
+							<li>Discrete Mathematics and Probability Theory (CS 70)</li>
+							<li>Designing Information Devices and Systems II (EECS 16B)</li>
+							<li>Introduction to Database Systems (CS 186)</li>
+							<li>Efficient Algorithms and Intractable Problems (CS 170)</li>
+							<li>Social Justice in EECS (CS 194)</li>
+							<li>Computer Security (CS 161)*</li>
+							<li>User Interface Design and Development (CS 160)*</li>
+							<li>Creative Programming (DesInv 23)*</li>
+							<li>Web Design (DesInv 98)</li>
+						</ul>
+						<p>Data Science</p>
+						<ul>
+							<li>Foundations of Data Science (Data 8)</li>
+							<li>Principles and Techniques of Data Science (Data 100)</li>
+							<li>Linear Algebra and Differential Equations (Math 54)</li>
+							<li>Probability and Mathematical Statistics in Data Science (Stat 88)</li>
+							<li>Human Contexts and Ethics of Data (Data C104)</li>
+							<li>Data Mining and Analytics (Data 144)</li>
+							<li>Introduction to Probability and Statistics in Biology and Public Health (PBHLTH 142)*</li>
+						</ul>
+						<p>Other</p>
+						<ul>
+							<li>Introduction to Linguistic Science (Ling 100)</li>
+							<li>Introduction to Economics (Econ 2)</li>
+							<li>Project Management (Ugba 146)</li>
+						</ul>
+						<p id="progress">*in progress</p>
+					</div>
+				</div>
+			</section>
         </div>
     </body>
 </html>
