--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <body>
 		<!--Navigation Bar-->
 		<div id="nav">
-			<a href="#home-section" class="nav-item right">AMBER JIANG</a>
-			<a href="#courses-section" class="nav-item left">COURSES</a>
-			<a href="#projects-section" class="nav-item left">PROJECTS</a>
-			<a href="#library-section" class="nav-item left">LIBRARY</a>
-            <a href="#crochet-section" class="nav-item left">CROCHET</a>
+			<a href="#home-section" class="nav-item">AMBER JIANG</a>
+			<a href="#courses-section" class="nav-item">COURSES</a>
+			<a href="#projects-section" class="nav-item">PROJECTS</a>
+			<a href="#library-section" class="nav-item">LIBRARY</a>
+            <a href="#crochet-section" class="nav-item">CROCHET</a>
 		</div>
 
     </body>
