--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
 		<meta name="description" content="Amber Jiang portfolio">
 		<meta name="keywords" content="Amber Jiang, UC Berkeley">
-		<title>Amber Jiang</title>
+		<title>Amber Jssiang</title>
 	</head>
     <body>
 		<!--Navigation Bar-->
